--- a/css/style.css
+++ b/css/style.css
@@ -14,26 +14,28 @@ html, body, #main {
   #nav .fa-bars {
     color: #fff; }
   #nav a {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column; }
+	color: #fff;
+	display: inline;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
   #nav a:hover {
     color: #0ff; }
 
 #main #home {
   background-color: #ccc; }
   #main #home .cover {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background: url("../img/cover.jpg") center no-repeat;
-    background-size: cover;
-    color: #fff; }
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	background: url("../img/cover.png") center no-repeat;
+	background-size: cover;
+	color: #000;
+}
     #main #home .cover h1 {
       font-weight: 900;
       margin-bottom: 40px; }
