--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html, body, #main {
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
-	background: url("../img/cover.png") center no-repeat;
+	background: url("../img/cover1.png") center no-repeat;
 	background-size: cover;
 	color: #000;
 }
