--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
 @charset "UTF-8";
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateX(30px);
+    filter: saturate(0%); }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+    filter: saturate(100%); } }
+
+@keyframes sliceIn {
+  0% {
+    transform: translateX(-50px); }
+  100% {
+    transform: translateX(0px); } }
+
 html, body, #main {
   width: 100%;
   height: 100%;
@@ -14,40 +30,40 @@ html, body, #main {
   #nav .fa-bars {
     color: #fff; }
   #nav a {
-	color: #fff;
-	display: inline;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-}
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
   #nav a:hover {
     color: #0ff; }
 
 #main #home {
-  background-color: #ccc; }
+  background-color: #ccc;
+  animation: sliceIn 1s 0.2s ease; }
   #main #home .cover {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-	background: url("../img/cover1.png") center no-repeat;
-	background-size: cover;
-	color: #000;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background: url("../img/cover1.png") center no-repeat;
+    background-size: cover;
+    color: #000;
+    padding-top: 20vh; }
     #main #home .cover h1 {
       font-weight: 900;
       margin-bottom: 40px; }
     #main #home .cover p {
-      font-weight: 500;
+      font-weight: 400;
       margin-bottom: 40px;
       word-wrap: break-all;
       padding: 0 50px; }
     #main #home .cover a {
-      border: solid 1px #000;
+      border: solid 1px #777;
       color: #000;
-      opacity: 0.7; }
+      opacity: 0.8; }
 
 #main .title {
   width: 100%;
@@ -58,14 +74,28 @@ html, body, #main {
   flex-direction: column;
   background-color: #fff;
   font-size: 20pt;
-  font-weight: bold; }
+  font-weight: bold;
+  animation: fadeIn 1.5s ease both; }
 
 #main #product, #main #experiment, #main #about, #main #QA {
   padding-top: 100px;
-  display: none; }
+  display: none;
+  animation: sliceIn 1s 0.1s ease; }
 
 #main #footer {
   display: none; }
+
+#main #product .myframe {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
+  #main #product .myframe iframe {
+    width: 100%;
+    height: 300px;
+    border: none;
+    margin: 10px;
+    padding: 10px; }
 
 #main #product .container, #main #experiment .container {
   width: 100%; }
@@ -101,23 +131,23 @@ html, body, #main {
           align-items: center;
           justify-content: center;
           flex-direction: column; }
-
-#main #product .modal-dialog .modal-header, #main #experiment .modal-dialog .modal-header {
-  background-color: #eee;
-  border-bottom: solid 1px #777; }
-
-#main #product .modal-dialog .modal-body, #main #experiment .modal-dialog .modal-body {
-  border-bottom: solid 1px #777; }
-  #main #product .modal-dialog .modal-body img, #main #experiment .modal-dialog .modal-body img {
-    width: 200px;
-    height: 200px;
-    display: block;
-    margin: 0 auto; }
-  #main #product .modal-dialog .modal-body p, #main #experiment .modal-dialog .modal-body p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column; }
+  #main #product .container .modal-dialog .modal-content, #main #experiment .container .modal-dialog .modal-content {
+    background-color: #fff; }
+  #main #product .container .modal-dialog .modal-header, #main #experiment .container .modal-dialog .modal-header {
+    background-color: #eee;
+    border-bottom: solid 1px #777; }
+  #main #product .container .modal-dialog .modal-body, #main #experiment .container .modal-dialog .modal-body {
+    border-bottom: solid 1px #777; }
+    #main #product .container .modal-dialog .modal-body img, #main #experiment .container .modal-dialog .modal-body img {
+      width: 200px;
+      height: 200px;
+      display: block;
+      margin: 0 auto; }
+    #main #product .container .modal-dialog .modal-body p, #main #experiment .container .modal-dialog .modal-body p {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column; }
 
 #main #about {
   line-height: 30pt; }
@@ -196,19 +226,21 @@ html, body, #main {
           display: block;
           margin: 0 auto; }
     #main #footer .content .contact p {
-      text-align: center;
-      padding-left: 30px; }
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column; }
+    #main #footer .content .contact img {
+      display: block;
+      margin: 0 auto;
+      width: 100px;
+      height: 100px;
+      margin-left: 20px; }
   #main #footer .end {
-    width: 100%;
     margin: 0;
     padding: 0;
     background-color: #fff; }
-    #main #footer .end .row{
-      margin: 0;
-      padding: 0;
-    }
-
-    #main #footer .end p {
+    #main #footer .end a {
       display: flex;
       align-items: center;
       justify-content: center;
