--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,22 @@
   display: block
   margin: 0 auto
 
+@keyframes fadeIn
+  0%
+    opacity: 0
+    transform: translateX(30px)
+    filter: saturate(0%)
+  100%
+    opacity: 1
+    transform: translateX(0px)
+    filter: saturate(100%)
+
+@keyframes sliceIn
+  0%
+    transform: translateX(-50px)
+  100%
+    transform: translateX(0px)
+
 html,body,#main
   +size(100%)
   margin: 0
@@ -34,24 +50,26 @@ html,body,#main
 #main
   #home
     background-color: #ccc
+    animation: sliceIn 1s 0.2s ease
     .cover
       +center
       +size(100%)
-      background: url('../img/cover.jpg') center no-repeat 
+      background: url('../img/cover1.png') center no-repeat 
       background-size: cover
-      color: #fff      
+      color: #000
+      padding-top: 20vh  
       h1
         font-weight: 900
         margin-bottom: 40px
       p 
-        font-weight: 500
+        font-weight: 400
         margin-bottom: 40px
         word-wrap: break-all
         padding: 0 50px
       a
-        border: solid 1px #000
+        border: solid 1px #777
         color: #000
-        opacity: 0.7
+        opacity: 0.8
 
   .title
     +size(100%,40px)
@@ -59,12 +77,24 @@ html,body,#main
     background-color: #fff
     font-size: 20pt
     font-weight: bold
+    animation: fadeIn 1.5s ease both  
 
   #product,#experiment,#about,#QA
     padding-top: 100px
     display: none
+    animation: sliceIn 1s 0.1s ease
   #footer
     display: none
+
+  #product
+    .myframe
+      +center
+      iframe
+        width: 100%
+        height: 300px
+        border: none
+        margin: 10px
+        padding: 10px 
 
   #product,#experiment
     .container
@@ -96,17 +126,19 @@ html,body,#main
             border-top: solid 1px #888
             p
               +center
-    .modal-dialog
-      .modal-header
-        background-color: #eee
-        border-bottom: solid 1px #777
-      .modal-body  
-        border-bottom: solid 1px #777
-        img
-          +size(200px)
-          +img_center
-        p
-          +center
+      .modal-dialog
+        .modal-content
+          background-color: #fff
+        .modal-header
+          background-color: #eee
+          border-bottom: solid 1px #777
+        .modal-body  
+          border-bottom: solid 1px #777
+          img
+            +size(200px)
+            +img_center
+          p
+            +center
             
   #about
     line-height: 30pt
@@ -164,7 +196,7 @@ html,body,#main
     width: 100%
     .content
       margin: 0
-      padding: 50px 10%
+      padding: 50px 5%
       background-color: #ccc
       line-height: 25pt
       h4
@@ -182,11 +214,16 @@ html,body,#main
               +img_center
       .contact
         p
-          padding-left: 30px
+          +center
+        img
+          +img_center
+          +size(100px)
+          margin-left: 20px
+        
           
     .end
       margin: 0
       padding: 0
       background-color: #fff
-      p
+      a
         +center
