--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ html, body, #main {
     background-color: #fff;
     font-size: 20pt;
     font-weight: bold; }
-  #main #product, #main #experiment, #main #about, #main #act, #main #QA {
+  #main #product, #main #experiment, #main #about, #main #act, #main #QA, #main #recommend {
     padding-top: 100px;
     display: none;
     animation: sliceIn_down 1s 0.1s ease; }
