--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ html, body, #main {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "微軟正黑體";
+  font-family: "標楷體";
   background-color: #ddd; }
 
 #loading {
@@ -155,7 +155,7 @@ html, body, #main {
     background-color: #fff;
     font-size: 20pt;
     font-weight: bold; }
-  #main #product, #main #experiment, #main #about, #main #act, #main #QA,#main #recommend, #proof  {
+  #main #product, #main #experiment, #main #about, #main #act, #main #QA,#main #recommend,#main #proof  {
     padding-top: 100px;
     display: none;
     animation: sliceIn_down 1s 0.1s ease; }
@@ -212,8 +212,9 @@ html, body, #main {
     #main #product .container .modal-dialog .modal-body, #main #experiment .container .modal-dialog .modal-body {
       border-bottom: solid 1px #777; }
       #main #product .container .modal-dialog .modal-body img, #main #experiment .container .modal-dialog .modal-body img {
-        width: 200px;
-        height: 200px;
+        width: auto;
+        /*圖片大小*/
+        height: auto;
         display: block;
         margin: 0 auto; }
       #main #product .container .modal-dialog .modal-body .intro_title, #main #experiment .container .modal-dialog .modal-body .intro_title {
@@ -223,7 +224,7 @@ html, body, #main {
     #main #about .content {
       padding: 0 10%; }
       #main #about .content h3 {
-        margin-top: 20px; }
+        margin-top: 30px; }
       #main #about .content p {
         margin: 0; }
     #main #about .mycol {
