--- a/css/style.css
+++ b/css/style.css
@@ -170,54 +170,104 @@ html, body, #main {
       border: none;
       margin: 10px;
       padding: 10px; }
-  #main #product .container, #main #experiment .container {
+  #main #product .container,
+  #main #experiment .container,
+  #main #recommend .container,
+  #main #proof .container  {
     width: 100%; }
-    #main #product .container .row, #main #experiment .container .row {
+    #main #product .container .row,
+    #main #experiment .container .row ,
+    #main #recommend .container .row ,
+    #main #proof .container .row {
       padding: 0px 0;
       margin: 0; }
-    #main #product .container .col-md-3, #main #product .container .col-6, #main #experiment .container .col-md-3, #main #experiment .container .col-6 {
+    #main #product .container .col-md-3, #main #product .container .col-6,
+    #main #experiment .container .col-md-3, #main #experiment .container .col-6
+    #main #recommend .container .col-md-3, #main #recommend .container .col-6
+    #main #proof .container .col-md-3, #main #proof .container .col-6 {
       padding: 0;
       border-bottom: solid 10px #eee; }
-      #main #product .container .col-md-3 .card, #main #product .container .col-6 .card, #main #experiment .container .col-md-3 .card, #main #experiment .container .col-6 .card {
+      #main #product .container .col-md-3 .card, #main #product .container .col-6 .card,
+      #main #experiment .container .col-md-3 .card, #main #experiment .container .col-6 .card,
+      #main #recommend .container .col-md-3 .card, #main #recommend .container .col-6 .card,
+      #main #proof .container .col-md-3 .card, #main #proof .container .col-6 .card {
         background-color: #ddd;
         border: solid 1px #888;
         height: 250px; }
-        #main #product .container .col-md-3 .card a, #main #product .container .col-6 .card a, #main #experiment .container .col-md-3 .card a, #main #experiment .container .col-6 .card a {
+        #main #product .container .col-md-3 .card a, #main #product .container .col-6 .card a,
+        #main #experiment .container .col-md-3 .card a, #main #experiment .container .col-6 .card a,
+        #main #recommend .container .col-md-3 .card a, #main #recommend .container .col-6 .card a,
+        #main #proof .container .col-md-3 .card a, #main #proof .container .col-6 .card a {
           text-decoration: none;
           color: #000; }
-        #main #product .container .col-md-3 .card a:hover, #main #product .container .col-6 .card a:hover, #main #experiment .container .col-md-3 .card a:hover, #main #experiment .container .col-6 .card a:hover {
+        #main #product .container .col-md-3 .card a:hover, #main #product .container .col-6 .card a:hover,
+        #main #experiment .container .col-md-3 .card a:hover, #main #experiment .container .col-6 .card a:hover,
+        #main #recommend .container .col-md-3 .card a:hover, #main #recommend .container .col-6 .card a:hover,
+        #main #proof .container .col-md-3 .card a:hover, #main #proof .container .col-6 .card a:hover {
           color: #08a; }
-        #main #product .container .col-md-3 .card img, #main #product .container .col-6 .card img, #main #experiment .container .col-md-3 .card img, #main #experiment .container .col-6 .card img {
-          width: 160px;
-          height: 160px;
+        #main #product .container .col-md-3 .card img, #main #product .container .col-6 .card img,
+        #main #experiment .container .col-md-3 .card img, #main #experiment .container .col-6 .card img,
+        #main #recommend .container .col-md-3 .card img, #main #recommend .container .col-6 .card img,
+        #main #proof .container .col-md-3 .card img, #main #proof .container .col-6 .card img {
+          /*縮圖大小*/
+          width: auto;
+          height: auto;
           display: block;
           margin: 0 auto; }
-        #main #product .container .col-md-3 .card img:hover, #main #product .container .col-6 .card img:hover, #main #experiment .container .col-md-3 .card img:hover, #main #experiment .container .col-6 .card img:hover {
+        #main #product .container .col-md-3 .card img:hover, #main #product .container .col-6 .card img:hover,
+        #main #experiment .container .col-md-3 .card img:hover, #main #experiment .container .col-6 .card img:hover,
+        #main #recommend .container .col-md-3 .card img:hover, #main #recommend .container .col-6 .card img:hover,
+        #main #proof .container .col-md-3 .card img:hover, #main #proof .container .col-6 .card img:hover {
           transform: translateY(-10px);
           transition: 0.3s; }
-        #main #product .container .col-md-3 .card .card-img-top, #main #product .container .col-6 .card .card-img-top, #main #experiment .container .col-md-3 .card .card-img-top, #main #experiment .container .col-6 .card .card-img-top {
+        #main #product .container .col-md-3 .card .card-img-top, #main #product .container .col-6 .card .card-img-top,
+        #main #experiment .container .col-md-3 .card .card-img-top, #main #experiment .container .col-6 .card .card-img-top,
+        #main #recommend .container .col-md-3 .card .card-img-top, #main #recommend .container .col-6 .card .card-img-top,
+        #main #proof .container .col-md-3 .card .card-img-top, #main #proof .container .col-6 .card .card-img-top {
           padding: 10px; }
-        #main #product .container .col-md-3 .card .card-body, #main #product .container .col-6 .card .card-body, #main #experiment .container .col-md-3 .card .card-body, #main #experiment .container .col-6 .card .card-body {
+        #main #product .container .col-md-3 .card .card-body, #main #product .container .col-6 .card .card-body,
+        #main #experiment .container .col-md-3 .card .card-body, #main #experiment .container .col-6 .card .card-body,
+        #main #recommend .container .col-md-3 .card .card-body, #main #recommend .container .col-6 .card .card-body,
+        #main #proof .container .col-md-3 .card .card-body, #main #proof .container .col-6 .card .card-body {
           border-top: solid 1px #888; }
-          #main #product .container .col-md-3 .card .card-body p, #main #product .container .col-6 .card .card-body p, #main #experiment .container .col-md-3 .card .card-body p, #main #experiment .container .col-6 .card .card-body p {
+          #main #product .container .col-md-3 .card .card-body p, #main #product .container .col-6 .card .card-body p,
+          #main #experiment .container .col-md-3 .card .card-body p, #main #experiment .container .col-6 .card .card-body p,
+          #main #recommend .container .col-md-3 .card .card-body p, #main #recommend .container .col-6 .card .card-body p,
+          #main #proof .container .col-md-3 .card .card-body p, #main #proof .container .col-6 .card .card-body p {
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column; }
-    #main #product .container .modal-dialog .modal-content, #main #experiment .container .modal-dialog .modal-content {
+    #main #product .container .modal-dialog .modal-content,
+    #main #experiment .container .modal-dialog .modal-content,
+    #main #recommend .container .modal-dialog .modal-content,
+    #main #proof .container .modal-dialog .modal-content {
       background-color: #fff; }
-    #main #product .container .modal-dialog .modal-header, #main #experiment .container .modal-dialog .modal-header {
+    #main #product .container .modal-dialog .modal-header,
+    #main #experiment .container .modal-dialog .modal-header,
+    #main #recommend .container .modal-dialog .modal-header,
+    #main #proof .container .modal-dialog .modal-header {
       background-color: #eee;
       border-bottom: solid 1px #777; }
-    #main #product .container .modal-dialog .modal-body, #main #experiment .container .modal-dialog .modal-body {
+    #main #product .container .modal-dialog .modal-body,
+    #main #experiment .container .modal-dialog .modal-body,
+    #main #recommend .container .modal-dialog .modal-body,
+    #main #proof .container .modal-dialog .modal-body{
+
       border-bottom: solid 1px #777; }
-      #main #product .container .modal-dialog .modal-body img, #main #experiment .container .modal-dialog .modal-body img {
+      #main #product .container .modal-dialog .modal-body img,
+      #main #experiment .container .modal-dialog .modal-body img,
+      #main #recommend .container .modal-dialog .modal-body img,
+      #main #proof .container .modal-dialog .modal-body img {
+        /*彈跳圖片大小*/
         width: auto;
-        /*圖片大小*/
         height: auto;
         display: block;
         margin: 0 auto; }
-      #main #product .container .modal-dialog .modal-body .intro_title, #main #experiment .container .modal-dialog .modal-body .intro_title {
+      #main #product .container .modal-dialog .modal-body .intro_title,
+      #main #experiment .container .modal-dialog .modal-body .intro_title,
+      #main #recommend .container .modal-dialog .modal-body .intro_title,
+      #main #proof .container .modal-dialog .modal-body .intro_title {
         text-align: center; }
   #main #about {
     line-height: 30pt; }
