--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ html, body, #main {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "標楷體";
+  font-family: "微軟正黑體";
   background-color: #ddd; }
 
 #loading {
