--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,17 @@ pre {
   #main #product, #main #experiment, #main #about, #main #act, #main #QA,#main #recommend,#main #proof  {
     padding-top: 100px;
     display: none;
-    animation: sliceIn_down 1s 0.1s ease; }
+    animation: sliceIn_down 1s 0.1s ease; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background: url("../img/bg.png") center no-repeat;
+    background-size: cover;
+    color: #000;
+  }
   #main #product .myframe {
     display: flex;
     align-items: center;
