--- a/css/style.css
+++ b/css/style.css
@@ -188,8 +188,8 @@ pre {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     background: url("../img/bg.png") center no-repeat;
     background-size: cover;
     color: #000;
@@ -226,19 +226,21 @@ pre {
       #main #experiment .container .col-md-3 .card, #main #experiment .container .col-6 .card,
       #main #recommend .container .col-md-3 .card, #main #recommend .container .col-6 .card,
       #main #proof .container .col-md-3 .card, #main #proof .container .col-6 .card {
-        background-color: #ddd;
+        background-color:rgba(0%,0%,0%,0.6);
         border: solid 1px #888;
         height: 250px; }
         #main #product .container .col-md-3 .card a, #main #product .container .col-6 .card a,
         #main #experiment .container .col-md-3 .card a, #main #experiment .container .col-6 .card a,
         #main #recommend .container .col-md-3 .card a, #main #recommend .container .col-6 .card a,
         #main #proof .container .col-md-3 .card a, #main #proof .container .col-6 .card a {
+          /*方框內顏色*/
           text-decoration: none;
-          color: #000; }
+          color: #fff; }
         #main #product .container .col-md-3 .card a:hover, #main #product .container .col-6 .card a:hover,
         #main #experiment .container .col-md-3 .card a:hover, #main #experiment .container .col-6 .card a:hover,
         #main #recommend .container .col-md-3 .card a:hover, #main #recommend .container .col-6 .card a:hover,
         #main #proof .container .col-md-3 .card a:hover, #main #proof .container .col-6 .card a:hover {
+          /*方框內特效顏色*/
           color: #08a; }
         #main #product .container .col-md-3 .card img, #main #product .container .col-6 .card img,
         #main #experiment .container .col-md-3 .card img, #main #experiment .container .col-6 .card img,
