--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ pre {
         font-weight: 400;
         margin-bottom: 30px;
         word-wrap: break-all;
-        padding: 10px;
+        padding: autoplay;
         display: flex;
         align-items: center;
         justify-content: center;
