--- a/css/style.css
+++ b/css/style.css
@@ -152,11 +152,16 @@ pre {
         margin-bottom: 30px;
         word-wrap: break-all;
         padding: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        font-size: 1.25rem;
         color: #eee; }
+        @media only screen and (max-width: 576px) {
+          #main #home .cover .p{
+            font-size: 1rem;
+          }
+        }
+
       #main #home .cover a {
         border: solid 1px #00f;
         color: #000;
