--- a/css/style.css
+++ b/css/style.css
@@ -149,16 +149,17 @@ pre {
       #main #home .cover .p {
         background-color: rgba(0, 0, 0, 0.6);
         font-weight: 400;
-        margin-bottom: 30px;
+        margin-bottom: 200px;
         word-wrap: break-all;
-        padding: 10px;
+        padding: 0px;
         width: 100%;
-        height: 100%;
+        height: auto;
         font-size: 1.25rem;
         color: #eee; }
         @media only screen and (max-width: 576px) {
           #main #home .cover .p{
             font-size: 1rem;
+              margin-bottom: 0px;
           }
         }
 
